style.css
h1,
h2,
h3,
h4 {
  margin: 0;
}

h1 {
  font-size: 82;
  color: 893D62;
}

h2 {
  font-size: 52;
}

h3 {
  font-size: 32;
  font-weight: lighter;
}

.email {
  color: 893D62;
}

h4 {
  font-size: 28;
}

p {
  font-size: 22;
  font-weight: light;
  color: black;
}

body {
  font-family: "Josefin Sans";
  width: 100vw;
  overflow-x: hidden;
  margin: 0;
}

/* sticky header section */

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  font-weight: 500;
  color: white;
  background-color: 893D62;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1;
  padding: 2% 5% 2% 5%;
  height: 70px;
  width: 100vw;
  overflow-x: hidden;
  box-sizing: border-box;
}

.menu_sections > div {
  padding: 12px;
  cursor: pointer;
  display: none;
}

@media only screen and (max-width: 1024px) {
  .menu_sections ul {
    display: none;
  }
  .menu_sections > div {
    display: block;
  }
}

.menu_icon {
  padding: 12px;
  cursor: pointer;
  color: white;
  font-size: 32px;
  width: 32px;
  text-align: center;
}

.header_info {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header_name {
  margin-right: 23%;
  white-space: nowrap;
}

.button_home {
  font-family: inherit;
  background-color: 893D62;
  font-size: min(8vw, 52px);
  font-weight: bolder;
  border: none;
  color: white;
  padding: 0%;
  text-align: center;
  text-decoration: none;
  white-space: nowrap;
}

.header_email {
  font-weight: lighter;
  text-decoration: none;
  font-size: min(4vw, 28px);
}

@media only screen and (max-width: 1024px) {
  .header_email {
    display: none;
  }
}

.mail {
  text-decoration: none;
  color: white;
}

ul {
  font-weight: 500;
  font-size: 28;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li {
  float: left;
}

.menu_section_link {
  display: block;
  padding: 8px;
  color: white;
  text-decoration: none;
}

li a:hover {
  font-weight: 500;
  color: ACCECB;
}

.menu_section_portfolio {
  position: relative;
  display: inline-block;
}

.portfolio_dropdown {
  margin-right: 8px;
  background-color: white;
  right: 0;
  display: none;
  position: absolute;
  min-width: 160px;
  width: 300px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.menu_section_portfolio:hover .portfolio_dropdown {
  display: block;
}

.portfolio_dropdown_link {
  margin: 2px 4px;
  display: block;
  padding: 8px;
  text-decoration: none;
  white-space: nowrap;
}

.portfolio_dropdown_link:nth-child(even) {
  background-color: #d6b0c1;
  color: #893d62;
}
.portfolio_dropdown_link:nth-child(even):hover {
  color: #893d62;
}

.portfolio_dropdown_link:nth-child(odd) {
  background-color: #accecb;
  color: #2b706b;
}
.portfolio_dropdown_link:nth-child(odd):hover {
  color: #2b706b;
}

.overflow_menu {
  display: none;
}

body.overflow_menu_visible {
  overflow: hidden;
}

body.overflow_menu_visible .overflow_menu {
  position: fixed;
  display: flex;
  justify-content: center;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: #dcc5d0;
}

.overflow_menu header {
  background-color: #dcc5d0;
}

.overflow_menu_link:not(:hover) h1 {
  text-decoration: none;
}

.overflow_menu_link {
  text-decoration: none;
}

.overflow_menu_link h1 {
  text-decoration: underline;
  color: #2b706b;
  font-size: min(10vw, 82px);
  padding: 2vh 0;
}

.overflow_menu_list {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.overflow_menu_button_home {
  font-size: min(8vw, 52px);
  font-weight: bolder;
  border: none;
  color: white;
  padding: 0%;
  text-align: center;
  text-decoration: none;
}

.close_icon {
  padding: 12px;
  cursor: pointer;
  color: white;
  font-size: 32px;
  width: 32px;
  text-align: center;
}

/* intro section */

.intro {
  background-color: DCC5D0;
  color: 893D62;
  display: flex;
  text-align: center;
  padding-top: 119px;
}

@media only screen and (max-width: 1024px) {
  .intro {
    flex-direction: column;
    padding-top: 70px;
  }

  .into_text {
    padding-left: 6.5%;
  }
}

.hi {
  margin-top: 15%;
  color: 2B706B;
  padding: 3% 0% 5% 0%;
}

.hi_continued {
  padding: 5% 0% 5% 0%;
}

.hi_email {
  padding: 12% 0% 5% 0%;
}

.intro_section {
  flex: 1;
  height: 750px;
  overflow: hidden;
  background-color: white;
}

.into_text {
  padding-right: 6.5%;
}

.profile_image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 90% center;
  transform: scale(140%);
}

/* about me section */

.about {
  background-color: white;
  text-align: center;
  margin-top: 0.5%;
  padding-right: 6%;
  padding-left: 6%;
  padding-top: 140px;
}

.about2 {
  display: flex;
  gap: 4%;
  padding: 1% 0% 0% 0%;
}

@media only screen and (max-width: 1024px) {
  .about2 {
    flex-direction: column;
  }
}

.education_image {
  width: 100%;
  height: 247px;
  object-fit: cover;
  object-position: 0% 91%;
  transform: scale(1, 1);
  padding-top: 5%;
}

.education_title {
  padding: 5% 0% 4% 0%;
}

.explain {
  text-align: left;
  margin: 0%;
}

.workexperience_title {
  padding: 5% 0% 4% 0%;
}

.workexperience_image {
  width: 100%;
  height: 247px;
  object-fit: cover;
  object-position: 0% 91%;
  transform: scale(1, 1);
  padding-top: 5%;
}

.about_section {
  flex: 1;
}

/* portfolio projects section */

.portfolio {
  text-align: center;
  margin-top: 0.5%;

  padding-top: 140px;
}

.portfolio_section_link {
  text-decoration: none;
}

.portfolio_info {
  padding: 3% 5% 6% 5%;
}

.portfolio_info1 {
}

.portfolio_info2 {
  padding-top: 1%;
}

.portfolio_sections {
  display: grid;
  row-gap: 10px;
  overflow-x: hidden;
}

.titlesequences_div {
  background-color: #accecb;
  padding: 9%;
  background-size: auto 85%;
  background-repeat: no-repeat;
  background-position: right 10% bottom 0px;
}

.titlesequences_div:hover {
  background-image: url(Website_Images/Category_images/titlesequences.png);
  cursor: pointer;
}

.titlesequences_name {
  font-size: 82;
  font-weight: bolder;
  color: #2b706b;
}

.sunsensesuncream_div {
  background-color: #d6b0c1;
  padding: 9%;
  background-size: auto 77%;
  background-repeat: no-repeat;
  background-position: left 0% bottom 0px;
}

.sunsensesuncream_div:hover {
  background-image: url(Website_Images/Category_images/sunsensesuncream.png);
  cursor: pointer;
}

.sunsensesuncream_name {
  font-size: 82;
  font-weight: 700;
  color: #893d62;
}

.lemonde_div {
  background-color: #accecb;
  padding: 9%;
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position: right 10% bottom 0px;
}

.lemonde_div:hover {
  background-image: url(Website_Images/Category_images/lemonde.png);
  cursor: pointer;
}

.lemonde_name {
  font-size: 82;
  font-weight: 700;
  color: #2b706b;
}

.boardgame_div {
  background-color: #d6b0c1;
  padding: 9%;
  background-size: auto 65%;
  background-repeat: no-repeat;
  background-position: left 10% bottom 0px;
}

.boardgame_div:hover {
  background-image: url(Website_Images/Category_images/boardgame.png);
  cursor: pointer;
}

.boardgame_name {
  font-size: 82;
  font-weight: 700;
  color: #893d62;
}

.sadnessevent_div {
  background-color: #accecb;
  padding: 9%;
  background-size: auto 63%;
  background-repeat: no-repeat;
  background-position: right 10% bottom 0px;
}

.sadnessevent_div:hover {
  background-image: url(Website_Images/Category_images/sadnessevent.png);
  cursor: pointer;
}

.sadnessevent_name {
  font-size: 82;
  font-weight: 700;
  color: #2b706b;
}

.fictionalcreature_div {
  background-color: #d6b0c1;
  padding: 9%;
  background-size: auto 70%;
  background-repeat: no-repeat;
  background-position: left 0% bottom 0px;
}

.fictionalcreature_div:hover {
  background-image: url(Website_Images/Category_images/fictionalcreature.png);
  cursor: pointer;
}

.fictionalcreature_name {
  font-size: 82;
  font-weight: 700;
  color: #893d62;
}

/* footer section */

footer {
  font-weight: 600;
  color: white;
  background-color: #893d62;
  text-align: left;
  margin-top: 0.5%;
  padding: 4% 5% 4% 5%;
  width: 100vw;
  overflow-x: hidden;
  box-sizing: border-box;
}

.contacts {
  display: flex;
  justify-content: space-between;
  flex-flow: column wrap;
}

.contact_me {
  align-items: flex-end;
}

.row1 {
  display: flex;
  justify-content: flex-start;
}

.row2 {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  padding-top: 10px;
}

.column1 {
  display: flex;
  align-self: flex-start;
  padding-top: 5px;
}

.column2 {
  display: flex;
  flex-flow: row nowrap;
  gap: 60px;
}

.contact_email {
  flex: 1;
  font-size: 32;
}

.linkedin {
  height: 40px;
}

.github {
  height: 40px;
}

.figma {
  height: 40px;
}

